Gerando número de pedido. Corrigindo data de MovimentacaoEstoque

--- a/medsales/medsales-app/src/main/webapp/movimentacao/movimentacoes.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimentacao/movimentacoes.xhtml
@@ -46,7 +46,7 @@
 
 				<p:column headerText="Data" sortBy="#{movimentacao.dataMovimentacao}">
 					<h:outputText value="#{movimentacao.dataMovimentacao}">
-						<f:convertDateTime pattern="dd/MM/yyyy HH:mm" />
+						<f:convertDateTime pattern="dd/MM/yyyy" />
 					</h:outputText>
 				</p:column>
 
