--- a/medsales/medsales-app/src/main/webapp/movimento/valor/investimento/investimento.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/valor/investimento/investimento.xhtml
@@ -25,8 +25,7 @@
 			<ui:include src="investimentoList.xhtml" />
 		</p:outputPanel>
 
-		<p:outputPanel rendered="#{investimentoAction.crudOperation.equals('E')}">
-			<ui:param name="param_pageSubtitle" value="Manutenção" />
+		<p:outputPanel rendered="#{investimentoAction.crudOperation.equals('E') or investimentoAction.crudOperation.equals('I')}">
 			<ui:include src="investimentoEdit.xhtml" />
 		</p:outputPanel>	
 
