Implementando navegação de volta Investimento > Ciclo. Após uma operação sobre um investimento, se a origem foi um ciclo, retorna para o fluxo do ciclo.

--- a/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/cicloEdit.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/cicloEdit.xhtml
@@ -79,7 +79,8 @@
 				<p:confirm header="Confirmation" message="Deseja REMOVER o Ciclo?" icon="ui-icon-alert" />
 			</p:commandButton>
 
-			<p:commandButton actionListener="#{cicloAction.save()}" value="Salvar" update=":content-panel" />
+			<p:commandButton id="save" actionListener="#{cicloAction.save()}" value="Salvar" update=":content-panel" />
+			<p:defaultCommand target="save"/>
 		</p:panelGrid>
 
 		<p:confirmDialog global="true">
