--- a/medsales/medsales-app/src/main/webapp/movimento/valor/investimento/investimento.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/valor/investimento/investimento.xhtml
@@ -10,6 +10,8 @@
 	<!-- lid para book-markable -->
 	<f:viewParam name="lid" value="#{investimentoAction.lid}" />
 	<f:viewParam name="op" value="#{investimentoAction.op}" />
+	<f:viewParam name="clid" value="#{investimentoAction.clid}" />
+	
 	<f:viewAction action="#{investimentoAction.doGetParams()}" />
 </f:metadata>
 
