--- a/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/ciclo.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/ciclo.xhtml
@@ -1,11 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui"
+	xmlns:p="http://primefaces.org/ui">
+
+<f:metadata>
+	<!-- lid para book-markable -->
+	<f:viewParam name="lid" value="#{cicloAction.lid}" />
+	<f:viewParam name="op" value="#{cicloAction.op}" />
+	
+	<f:viewAction action="#{cicloAction.doGetParams()}" />
+</f:metadata>
+
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	template="/templates/default/main.xhtml">
 
 
