--- a/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/cicloEdit.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/valor/ciclo/cicloEdit.xhtml
@@ -31,7 +31,7 @@
 		<div style="float: right">
 			<p:commandButton id="addBt" value="Adicionar..." type="button" icon="ui-icon-extlink" />
 			<p:tieredMenu overlay="true" trigger="addBt" my="right top" at="right bottom" style="width:200px">
-				<p:menuitem value="Investimento" icon="ui-icon-disk" actionListener="#{cicloAction.novoMovimento()}"/>
+				<p:menuitem value="Investimento" icon="ui-icon-disk" ajax="false" immediate="true" url="#{cicloAction.getInvestimentoLink()}" />
 			</p:tieredMenu>
 		</div>
 		<p:dataTable id="tbMovimentos" var="movimento" value="#{cicloAction.entity.movimentos}" paginator="true"
