--- a/medsales/medsales-app/src/main/webapp/movimento/estoque/entrada.xhtml
+++ b/medsales/medsales-app/src/main/webapp/movimento/estoque/entrada.xhtml
@@ -13,190 +13,27 @@
 
 </f:metadata>
 
-<ui:composition template="/templates/default/main.xhtml">
+
+<ui:composition template="criarMovimentoTemplate.xhtml">
 
 	<ui:param name="param_pageTitle" value="Cadastro de Entrada" />
+	<ui:param name="movimentoAction" value="#{entradaAction}" />
 
-	<ui:define name="content">
+	<ui:define name="ajaxItemEdit">
+		<!-- necessário redefinir por um bug no primefaces ajax que não entendeu um action parametrizado -->
+		<p:ajax event="rowEdit" listener="#{entradaAction.onItemEdit}" />
+	</ui:define>	
 
-		<style>
-.labels_col1 {
-	max-width: 200px
-}
-</style>
+	<ui:define name="botoesCustom">
 
-		<script type="text/javascript">
+		<p:menuitem value="Concluir e Gerar Saída" actionListener="#{entradaAction.concluirGerarSaida()}" icon="ui-icon-disk"
+			action="#{entradaAction.redirectIfNoError('saida.xhtml?lid='.concat(entradaAction.saidaGerada.id))}" update="btnForm"
+			rendered="#{empty entradaAction.movimentacao.id}" />
 
-function limparCampoProduto() {
-	window.document.getElementById("itemForm:produto_input").value = "";
-}
+		<p:menuitem value="Gerar Saída" actionListener="#{entradaAction.gerarSaida()}" icon="ui-icon-disk"
+			action="#{entradaAction.redirectIfNoError('saida.xhtml?lid='.concat(entradaAction.saidaGerada.id))}" update="btnForm"
+			rendered="#{not empty entradaAction.movimentacao.id}" />
 
-</script>
-		<h:form>
-			<p:panelGrid columns="3">
-				<h:outputFormat value="Esta entrada foi marcada como {0} em {1} " rendered="#{entradaAction.movimentacao.id != null}">
-					<f:param value="#{entradaAction.movimentacao.status.descricao.toUpperCase()}" />
-					<f:param value="#{entradaAction.movimentacao.dataAlteracao}" />
-				</h:outputFormat>
-				
-				<p:outputLabel value="Salvar Auto:" for="auto" />
-				<p:selectBooleanCheckbox id="auto" value="#{entradaAction.salvarAutomaticamente}">
-					<p:ajax event="change"/>	
-				</p:selectBooleanCheckbox>
-			</p:panelGrid>
-		</h:form>
-		<h:form id="itemForm">
-			<p:focus context="itemGrid" />
-			<p:panelGrid id="itemGrid" columns="3" layout="grid" columnClasses="labels_col1">
-
-
-				<p:outputLabel value="Produto:" for="produto" />
-				<p:autoComplete id="produto" value="#{entradaAction.item.precoProduto}" minQueryLength="2"
-					title="Nome ou código de barras do Produto" completeMethod="#{entradaAction.searchProdutos}" var="precoProduto"
-					itemLabel="#{precoProduto.produto.nome}" itemValue="#{precoProduto}" dropdown="true" required="true">
-
-					<p:column>
-						<h:outputText value="#{precoProduto.produto.nome}" />
-					</p:column>
-					<p:column>
-						R$ <h:outputText value="#{precoProduto.valor}" converter="BigDecimalConverter" />
-					</p:column>
-
-				</p:autoComplete>
-				<p:message for="produto" />
-
-				<p:outputLabel value="Quantidade:" for="quantidade" />
-				<p:spinner id="quantidade" value="#{entradaAction.item.quantidade}" min="1" required="true" />
-				<p:message for="quantidade" />
-
-				<p:commandButton value="Adicionar" action="#{entradaAction.adicionarItem}" update=":content-panel"
-					process="@this quantidade produto" />
-			</p:panelGrid>
-		</h:form>
-
-		<p:spacer />
-
-		<!-- Lista de produtos adicionados -->
-		<h:form id="listForm">
-			<p:dataTable id="itemList" value="#{entradaAction.itens}" var="itemPreco" emptyMessage="Nenhum Item cadastrado."
-				rows="100" paginator="true" paginatorPosition="bottom" editable="true" editMode="row">
-
-				<f:facet name="header">
-    				Itens        
-	       		</f:facet>
-
-				<p:ajax event="rowEdit" listener="#{entradaAction.onItemEdit}" />
-
-				<p:column headerText="Cód Barras">
-					<h:outputText value="#{itemPreco.precoProduto.produto.codigoBarras}" />
-				</p:column>
-
-				<p:column headerText="Produto">
-					<h:outputText value="#{itemPreco.precoProduto.produto.nome}" />
-				</p:column>
-
-				<p:column headerText="Quantidade" style="text-align:center">
-					<p:cellEditor>
-						<f:facet name="output">
-							<h:outputText value="#{itemPreco.quantidade}" />
-						</f:facet>
-						<f:facet name="input">
-							<p:spinner value="#{itemPreco.quantidade}" min="1" size="5"/>
-						</f:facet>
-					</p:cellEditor>
-				</p:column>
-
-				<p:column headerText="R$ Un" style="text-align:right">
-					<h:outputText value="#{itemPreco.precoProduto.valor}" converter="BigDecimalConverter" />
-				</p:column>
-
-				<p:column headerText="R$ Total" style="text-align:right">
-					<h:outputText id="precoTotal" value="#{itemPreco.precoProduto.valor * itemPreco.quantidade}"
-						converter="BigDecimalConverter" />
-				</p:column>
-
-				<p:column style="width:32px">
-					<p:rowEditor/>
-					
-					<p:commandLink actionListener="#{entradaAction.remover(itemPreco)}" update=":content-panel"
-							immediate="true" styleClass="ui-icon ui-icon-trash"/>
-				</p:column>
-			</p:dataTable>
-
-			<h:commandLink value="XLS">
-				<p:dataExporter type="xls" target="itemList" fileName="pedido" pageOnly="true" />
-			</h:commandLink>
-
-		</h:form>
-
-		<p:separator />
-
-		<h:form id="btnForm">
-
-			<p:panelGrid columns="3" layout="grid" columnClasses="labels_col1">
-				<p:outputLabel value="Parceiro/Vendedor:" for="parceiro" />
-				<p:autoComplete id="parceiro" value="#{entradaAction.movimentacao.parceiro}" minQueryLength="2"
-					title="Onde o produto foi comprado?" completeMethod="#{searchParceiroAction.search}" var="parceiro"
-					itemLabel="#{parceiro.nome}" itemValue="#{parceiro}" forceSelection="true" dropdown="true" required="true" />
-				<p:message for="parceiro" />
-
-				<p:outputLabel value="Data da Entrada:" for="dtentrada" />
-				<p:calendar id="dtentrada" value="#{entradaAction.movimentacao.dataMovimento}" pattern="dd/MM/yyyy" mask="true"
-					showOn="button" required="true" />
-				<p:message for="dtentrada" />
-
-
-			</p:panelGrid>
-
-			<br />
-
-			<p:separator style="height:2px" />
-
-			<div style="text-align: right">
-
-				<p:commandButton value="Voltar" immediate="true" action="/movimento/estoque/movimentos.xhtml?faces-redirect=true" />
-
-				<p:splitButton value="Concluir" actionListener="#{entradaAction.concluir}" icon="ui-icon-disk"
-					action="#{entradaAction.redirectIfNoError('movimentos.xhtml')}" update="btnForm">
-
-					<p:menuitem value="Salvar Como Rascunho" actionListener="#{entradaAction.salvarRacunho}" icon="ui-icon-disk"
-						action="#{entradaAction.redirectIfNoError('movimentos.xhtml')}" update="btnForm" />
-
-					<p:menuitem value="Concluir e Gerar Saída" actionListener="#{entradaAction.concluirGerarSaida()}"
-						icon="ui-icon-disk"
-						action="#{entradaAction.redirectIfNoError('saida.xhtml?lid='.concat(entradaAction.saidaGerada.id))}"
-						update="btnForm" rendered="#{empty entradaAction.movimentacao.id}" />
-
-					<p:menuitem value="Gerar Saída" actionListener="#{entradaAction.gerarSaida()}" icon="ui-icon-disk"
-						action="#{entradaAction.redirectIfNoError('saida.xhtml?lid='.concat(entradaAction.saidaGerada.id))}"
-						update="btnForm" rendered="#{not empty entradaAction.movimentacao.id}" />
-
-					<p:separator />
-
-					<p:menuitem id="itemExcluir" value="Excluir" icon="ui-icon-trash"
-						onclick="$('#btnForm\\:btnRemove').click();return;" />
-
-				</p:splitButton>
-
-				<!-- Este botão escondido foi necessário porque não foi possível utilizar um diálogo com o p:menuitem acima. -->
-				<p:commandButton id="btnRemove" value="DELETE" actionListener="#{entradaAction.remover()}"
-					action="#{entradaAction.redirectIfNoError('movimentos.xhtml')}" update="btnForm"
-					rendered="#{not empty entradaAction.movimentacao.id}" immediate="true" style="display:none;">
-
-					<p:confirm header="Atenção!"
-						message="Deseja realmente REMOVER esta Entrada? Não será possível recuperar suas informações."
-						icon="ui-icon-alert" />
-
-				</p:commandButton>
-
-
-				<p:confirmDialog global="true">
-					<p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
-					<p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
-				</p:confirmDialog>
-
-			</div>
-		</h:form>
 	</ui:define>
 </ui:composition>
 
